<resources>
    <string name="app_name">DataBindingWithRecyclerview</string>
    <string name="error_something_wrong">please try again</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="sign_up">Sign Up</string>
    <string name="mandatory_field">mandatory field</string>
    <string name="invalid_email">invalid email</string>
    <string name="password_error">password error</string>
</resources>
