<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="registerViewModel"
            type="com.databindingwithrecyclerview.model.RegisterViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tledtRName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:errorEnabled="@{registerViewModel.nameErrorEnable}"
            app:error="@{registerViewModel.nameError}">

        <EditText
            android:id="@+id/edtRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:text='@={registerViewModel.name}'
           />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlRPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="@{registerViewModel.passwordErrorEnable}"
            app:layout_constraintTop_toBottomOf="@+id/tledtRName"
            app:error = "@{registerViewModel.passwordError}">
        <EditText
            android:id="@+id/edtRPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={registerViewModel.password}"
             />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlRConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="@{registerViewModel.confirmPasswordErrorEnable}"
            app:layout_constraintTop_toBottomOf="@+id/tlRPassword"
            app:error = "@{registerViewModel.confirmPasswordError}">
        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:text="@={registerViewModel.confirmPassword}"
            />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tlRConfirmPassword" />
    </android.support.constraint.ConstraintLayout>

</layout>